--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -15,7 +15,8 @@
 @import "doulins";
 @import "arguments";
 @import "comments";
-@import  "social-share-button";
+@import "social-share-button";
+@import "simpletextrotator";
 
 
 @font-face {
@@ -288,6 +289,7 @@ input.ajust-input, textarea.ajust-input {
 }
 
 #challenge-badge{
+
 	#challenge-badge1{
 		height:128px;
 		width:470px;
@@ -307,6 +309,12 @@ input.ajust-input, textarea.ajust-input {
 		margin-top: -80px;
 		position:relative;
 		z-index: 1;
+		}
+		.banniere{
+			margin-left: 38px;
+			margin-top: -30px;
+			position: relative;
+			z-index: 2;
 		}
 		
 		.jugeoubref{
