--- a/app/views/challenges/_form.html.erb
+++ b/app/views/challenges/_form.html.erb
@@ -65,7 +65,7 @@
 
 				<div class="row" id="tags_challenge">
 					<%= f.hidden_field :jugebreve, :value => 0 %>
-					<%= f.text_field :tag_list, class: "tags", placeholder: "Tag1, Tag2, Tag3 ..."%>
+					<%= f.text_field :tag_list, class: "tags", placeholder: "Mots clef (séparés par une virgule )"%>
 				</div>
 				<div class="row" id='submit-challenge'>
 						<%= f.submit "Créér le débat", class: "action" %>
