--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -2,7 +2,7 @@
 	<div class="container">
 		
 		<div class="row" id="intro-newchallenge">
-			<div class="texte2">Lance un défi, prends position et invite tes adversaires !</div>			
+			<div class="texte2">Lance une joute, prends position et invite tes adversaires !</div>			
 		</div>
 		
 		<%= render "challenges/form", challenge: @challenge, value: nil%>
@@ -17,29 +17,65 @@
 
 <div class="container" id="index-doulins">
 	<div class="row" id="open-infos">
-		<div class="span11" id="informations-doulin">
-			<div class="row" id="informations-challenge">
-				<div class ="span9" id="textexp">
-					Les Défis, comment ça marche ?				
-				</div>
-			 	<div class="span1" id="fermer-explication">
-				X
-				</div>
-		    </div>
-			<div class="row" id="ouvrons-encore">
-				<div class="image-gauche">
-					<%= image_tag("explication-1-01.png", class: "fleche10")%>
+		<div class="span11" id="informations-doulin1">
+			<div class="row" id="informations-challenge1">
 				
+				<div class="row" id="sign_in2">
+					<div class="span4" id="gauche-expl">
+					
+						<div class="row" id="sign_in33">
+							<span class="texte1">Inscrivez-vous</span><span class="texte2"> et participez,</span>
+						</div>
+						<div class="row" id="sign_5">
+							<%= image_tag("image4-explcha-01.png")%>
+						</div>
+						<div class="row" id="sign_4">
+							<span class="texte">Vous pouvez rejoindre une joute, ou en créer une nouvelle. Vous pouvez aussi inviter vos amis.</span>
+						</div>
+					</div>
+					
+					<div class="span4" id="gauche-expl">
+					
+						<div class="row" id="sign_in31">
+							<span class="texte1">Soyez éloquents</span><span class="texte2"> et argumentez.</span>
+						</div>
+						<div class="row" id="sign_51">
+							<%= image_tag("image2-explcha-01.png", class: "image")%>
+						</div>
+						<div class="row" id="sign_4">
+							<span class="texte">Des notifications vous signalent que c'est votre tour. Une fois votre argument validé, il est non modifiable.</span>
+						</div>
+						<div class="row" id="sign_52">
+							<%= image_tag("image3-explcha-01.png")%>
+						</div>
+					</div>
+					
+					<div class="span4" id="gauche-expl2">
+					
+						<div class="row" id="sign_in3">
+							<div id="fermer-explication">
+							X
+							</div>
+							<span class="texte1">Spectateur ? Votez</span><span class="texte2"> et départagez.</span>
+						</div>
+						<div class="row" id="sign_5">
+							<%= image_tag("image6-explcha-01.png")%>
+						</div>
+						<div class="row" id="sign_4">
+							<span class="texte">Vous pouvez voter pour l'équipe (ou la personne) qui vous a convaincu(e). Le suffrage universel décide de tout.</span>
+						</div>
+					</div>
 				</div>
-			</div>
+
+		  </div>
 		</div>
-	</div>
+	 </div>
 	
 	<div class="row" id="open-infos2">
 		<div class="span11" id="informations-doulin">
 			<div class="row" id="informations-challenge">
 				<div class ="span9" id="textexp">
-					La Création de défis.			
+					La Création de joutes.			
 				</div>
 			 	<div class="span1" id="fermer-explication1">
 				X
@@ -48,7 +84,7 @@
 			<div class="row" id="ouvrons-encore">
 				<div class="span3">
 					<div class="titre">
-					<%= link_to "Créer un défi", new_challenge_path, class: "challenge"%>
+					<%= link_to "Créer une joute", new_challenge_path, class: "challenge"%>
 					</div>
 					<div class="sous-titre">
 					Créez votre propre débat, pour défier vos amis.
