--- a/app/views/debates/_form.html.erb
+++ b/app/views/debates/_form.html.erb
@@ -34,7 +34,7 @@
 					</div>
 				</div>
 				<div class="row" id="tags_challenge">
-					<%= f.text_field :tag_list, class: "tags", placeholder: "Tag1, Tag2, Tag3 ..."%>
+					<%= f.text_field :tag_list, class: "tags", placeholder: "Mots clef (séparés par une virgule)"%>
 				</div>
 
 			</div>
