--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -23,7 +23,7 @@
 				Il y a 3 genres de débats :</br></br>
 					<h3>- Experts</h3> Nous essayons de contacter des experts pour venir débattre d'un sujet précis. Vous pouvez voter pour l'expert qui vous semble le plus pertinent, et vous pouvez commenter.</br></br>
 					<h3>- Ouvert</h3> Nous fixons les sujets, et vous participez au débat. Quand nous jugerons que le débat est clos, et que peu de nouveaux arguments peuvent être encore apportés nous clorons le débat, et nous le résumerons en sélectionnant les meilleurs arguments.</br></br>
-					<h3>- Défis</h3> Tu peux créer un défi, rejoindre un défi, inviter des "connaissances" à un défi. Le gagnant du défi sera désigné grâce au vote. Il existe 4 types de défis : Le 1vs1 (lincoln douglas debate), le 1vs1 par équipes (american parliamentary debate), le débat 4 coins (four corner debate) et enfin le débat 4 coins par équipes (british parliamentary debate).
+					<h3>- Défis</h3> Tu peux créer une joute, rejoindre une joute, inviter des "connaissances" à une joute. Le gagnant de la joute sera désigné grâce au vote. Il existe 4 types de joutes : Le 1vs1 (lincoln douglas debate), le 1vs1 par équipes (american parliamentary debate), le débat 4 coins (four corner debate) et enfin le débat 4 coins par équipes (british parliamentary debate).
 			</div>
 		</div>
 	</div>
@@ -38,7 +38,7 @@
 				Et les groupes, ça marche comment ?
 			</div>
 			<div class="texte">
-				Le groupe, est un mini-Moutoners à l'intérieur de Moutoners. Dans un groupe tu peux avoir des discussions, des débats ouverts ainsi que des défis. Les débats ouverts et les défis ne seront accessibles que si tu appartiens au groupe.</br></br>
+				Le groupe, est un mini-Moutoners à l'intérieur de Moutoners. Dans un groupe tu peux avoir des discussions, des débats ouverts ainsi que des joutes internes. Les débats ouverts et les joutes ne seront accessibles que si tu appartiens au groupe.</br></br>
 				<h3>Comment accéder au groupe?</h3>
 				Tu peux créer un groupe, tu seras le responsable du groupe. En tant que responsable tu peux inviter certaines personnes à faire partie de ton groupe. Si tu reçois une demande de participation à ton groupe, tu peux l'accepter ou la refuser.</br>
 				Si tu souhaites participer à un groupe, tu peux demander de faire partie du groupe, et attendre ensuite le feu vert d'un responsable du groupe.
@@ -76,7 +76,7 @@
 			<div class="texte">
 				Plusieurs améliorations sont prévues et sont déjà prêtes, mais nous attendons d'avoir une petite communauté pour les lancer:</br></br>
 				- Un système de points, où chaque débatteur récolte des points. Le nombre de points donnera accès (ou pas) à plusieurs trucs sympas: Défier un expert, Lancer des débats ouverts, Etre juge d'un débat.</br>
-				- Un système de juge pour les défis: Le vote populaire est souvent trompeur. Ca se saurait si la démocratie était un bon système. Les "Debating" desquels sont inspirés les défis, sont jugés par 3 juges en réalité.</br>
+				- Un système de juge pour les joutes: Le vote populaire est souvent trompeur. Ca se saurait si la démocratie était un bon système. Les "Debating" desquels sont inspirés les joutes, sont jugés par 3 juges en réalité.</br>
 				- Et bien sûr une Appli pour les tablettes! (bon en fait, celle-là elle n'est pas encore prête..)
 			</div>
 		</div>
@@ -89,10 +89,10 @@
 			<div class="bleu">
 			</div>
 			<div class="titre">
-				Les Quatre Types de défis, c'est quoi?
+				Les Quatre Types de joutes, c'est quoi?
 			</div>
 			<div class="texte">
-				Les 4 types de défis ont été sélectionnés parmi une multitude de débats standards internationaux. Dans le monde anglo-saxon le "debating", est une matière régulièrement enseignée au lycée ou à l'université. Plusieurs standards et règles ont été établies. Nous avons simplifié ces règles pour les adapter à Moutoners:
+				Les 4 types de joutes ont été sélectionnés parmi une multitude de débats standards internationaux. Dans le monde anglo-saxon le "debating", est une matière régulièrement enseignée au lycée ou à l'université. Plusieurs standards et règles ont été établies. Nous avons simplifié ces règles pour les adapter à Moutoners:
 				</br></br><h3>Duel face-à-face (Lincoln Douglas Debate)</h3>
 					Intuitivement, c'est le plus simple. On énonce un sujet. Une personne est "pour" l'autre "contre". Les nuances sont acceptées, il faut bien définir le sujet au début, mais en gros c'est une discussion normale. Chacun à son tour prend la parole, 4 fois de suite.
 					</br></br><h3>Duel par équipes(American Parliamentary Debate)</h3>
