--- a/app/views/static_pages/list_debates.html.erb
+++ b/app/views/static_pages/list_debates.html.erb
@@ -5,23 +5,60 @@
 	</div>
 	
 	<div class="row" id="open-infos">
-		<div class="span11" id="informations-doulin">
-			<div class="row" id="informations-challenge">
-				<div class ="span9" id="textexp">
-					Débats Ouverts, comment ça marche ?				
-				</div>
-			 	<div class="span1" id="fermer-explication">
-				X
-				</div>
-		    </div>
-			<div class="row" id="ouvrons-encore">
-				<div class="image-gauche">
-					<%= image_tag("explication-3-01.png", class: "fleche10")%>
+		<div class="span11" id="informations-doulin1">
+			<div class="row" id="informations-challenge1">
 				
+				<div class="row" id="sign_in2">
+					<div class="span4" id="gauche-expl">
+					
+						<div class="row" id="sign_in32">
+							<span class="texte1">Prenez parti</span><span class="texte2"> et votez,</span>
+						</div>
+						
+						<div class="row" id="sign_53">
+							<%= image_tag("image5-explcha-01.png")%>
+						</div>
+
+						<div class="row" id="sign_4">
+							<span class="texte">Tu peux voter: pour, contre ou "suisse" (aka neutre). </span>
+						</div>
+						</br>
+
+					</div>
+					
+					<div class="span4" id="gauche-expl">
+					
+						<div class="row" id="sign_in3">
+							<span class="texte1">Contribuez au débat</span><span class="texte2"> et argumentez,</span>
+						</div>
+						<div class="row" id="sign_52">
+							<%= image_tag("image3-explcha-01.png")%>
+						</div>
+						<div class="row" id="sign_4">
+							<span class="texte">Après avoir voté, tu peux apporter ta contribution en choisissant un argument "texte" ou "photo".</span>
+						</div>
+					</div>
+					
+					<div class="span4" id="gauche-expl2">
+					
+						<div class="row" id="sign_in31">
+							<div id="fermer-explication">
+							X
+							</div>
+							<span class="texte1">Réagissez</span><span class="texte2"> et arbitrez.</span>
+						</div>
+						<div class="row" id="sign_51">
+							<%= image_tag("image8-explcha-01.png")%>
+						</div>
+						<div class="row" id="sign_4">
+							<span class="texte">Tu peux comenter, apprécier ou déprécier les arguments des autres. Les arguments populaires seront mis en avant.</span>
+						</div>
+					</div>
 				</div>
-			</div>
+
+		  </div>
 		</div>
-	</div>
+	 </div>
 	
 				<div class="row" id= "for-badges">
 					<div class="span3">
