--- a/app/views/users/notifications.html.erb
+++ b/app/views/users/notifications.html.erb
@@ -68,7 +68,7 @@
 				<% @user.debat_pret.each do |challenge|%>
 				<section id="notifications">
 					<div class="span4" id="intro-notifications">
-						<div class="texte">Ce défi est prêt ! Tu peux commencer: </div></div>
+						<div class="texte">Tout le monde est prêt ! Tu peux commencer: </div></div>
 					<div class="row"><%= render "shared/challenge_badge", challenge: challenge %></div>
 				</section>
 				<%end%>
