--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -9,7 +9,7 @@
 	width: 780px;
 	margin-top:20px;
 	margin-left:47px;
-	margin-bottom: 30px;
+	margin-bottom: 20px;
 
 	
 	border-style: solid;
@@ -162,7 +162,9 @@
 		line-height: 23px;
 		 letter-spacing:-1px;
 		
-		
+		a:hover{
+		color:black;
+		}
 		}
 
 		#tags_list_doulin{
@@ -321,41 +323,8 @@
 	}
 	
 	
-	#share{
-	margin-top: -313px;
-	margin-left: 947px;
-	
-	.texte{
-	margin-top: -34px;
-	margin-left: 28px;
-	background-color: #000;
-	height: 24px;
-	width: 80px;
-	font-family: "gotham";
-	font-size: 16px;
-	color: #FFF;
-	padding-left: 8px;
-	padding-top:4px;
-		
-		.okk{
-		margin-top: -30px;
-		opacity:0;
-		}
-	}
-
-	
-	.ok{
-	position: relative;
-	z-index:0;
-	.okk{
-	margin-top: -30px;
-	opacity:0;
-	}
-	}
-	}
-	
 	#follow{
-	margin-top:-239px;
+	margin-top:-219px;
 	margin-left:947px;
 	height:  25px;
 	width: 90px;
@@ -399,7 +368,7 @@
 	
 	
 	#catcat{
-	margin-top:-215px;
+	margin-top:-194px;
 	margin-left:946px;
 	height:65px;
 	width:90px;
@@ -419,9 +388,74 @@
 	}
 	}
 	
+	#share2{
+		margin-left: 20px;
+		margin-bottom: 20px;
+		background-color: #808080;
+		min-height:50px;
+		width: 140px;
+		border-radius: 12px;
+		padding: 5px;
+	 	text-align: center;
+		color: white;
+		line-height: 20px;
+		font-family:"gotham-Bold";
+		font-size: 16px;
+		
+		a:hover{
+			color: white;
+		}
+	}
 	
+	#share{
+	margin-left: 420px;
+	margin-bottom: 20px;
+	background-color: #AAD0FF;
+	height:50px;
+	width: 240px;
+	border-radius: 12px;
+	padding-top:15px;
+ 	text-align: center;
+	color: black;
+	line-height: 20px;
+	font-family:"gotham-Bold";
+	font-size: 18px;
 	
-	#voter{
+	.texte{
+	margin-top: -34px;
+	margin-left: 28px;
+	background-color: #000;
+	height: 24px;
+	width: 80px;
+	font-family: "gotham";
+	font-size: 16px;
+	color: #FFF;
+	padding-left: 8px;
+	padding-top:4px;
+		
+		.okk{
+		margin-top: -30px;
+		opacity:1;
+		}
+	}
+
+	
+	.ok{
+	position: relative;
+	z-index:0;
+	.okk{
+	margin-top: -30px;
+	opacity:0;
+	
+	.social-share-button{
+	margin-left:-20px;
+	}
+	}
+	
+	}
+	}
+	
+	#votervoter{
 	margin-left:162px;
 	height:40px;
 	background-color: #C9C9C9;
@@ -430,6 +464,112 @@
 	font-family: "gotham";
 	font-size:18px;
 	text-align: center;
+	cursor: pointer;
+	
+	#vote{
+	height: 35px;
+	margin-top: 10px;
+	margin-right:5px;	
+	border-bottom:8px solid white;
+	
+	li{
+	display : inline-block;
+	}
+	
+	.vote2{
+		font-family:"gotham";
+		font-size:25px;
+
+	}
+
+	.oui-oui{
+		margin-top: -5px;
+		margin-left:30px;
+		background-color: #808080;
+		font-family: "bebasneue-webfont";
+		font-size: 25px;
+		padding: 5px 9px 5px 9px;
+		
+		.oui{
+		color: white;
+		}
+	}
+	
+	.oui-oui:hover{
+	background-color: #AAD0FF;
+	}
+	.oui-oui2{
+		margin-top: -5px;
+		margin-left:30px;
+		background-color: #AAD0FF;
+		font-family: "bebasneue-webfont";
+		font-size: 25px;
+		padding: 5px 9px 5px 9px;
+		
+		.oui{
+		color: white;
+		}
+	}
+	
+	.suisse-suisse{
+		margin-top: -5px;
+		margin-left:8px;
+		background-color: #FF6969;
+		font-family: "bebasneue-webfont";
+		font-size: 25px;
+		padding: 5px 12px 5px 12px;
+		
+		.suisse{
+		color: white;
+		}
+	}
+	
+	.suisse-suisse:hover{
+	background-color: #808080;
+	}
+	.suisse-suisse2{
+		margin-top: -5px;
+		margin-left:8px;
+		background-color: #808080;
+		font-family: "bebasneue-webfont";
+		font-size: 25px;
+		padding: 5px 12px 5px 12px;
+		
+		.suisse{
+		color: white;
+		}
+	}
+	
+	.non-non{
+		margin-top: -5px;
+		margin-left:8px;
+		background-color: #FFF;
+		font-family: "bebasneue-webfont";
+		font-size: 25px;
+		padding: 5px 9px 5px 9px;
+		
+		.non{
+		color: black;
+		}
+	}
+		
+		.non-non:hover{
+		background-color: #FF6969;
+		}
+		
+		.non-non2{
+			margin-top: -5px;
+			margin-left:8px;
+			background-color: #FF6969;
+			font-family: "bebasneue-webfont";
+			font-size: 25px;
+			padding: 5px 9px 5px 9px;
+
+			.non{
+			color: black;
+			}
+		}	
+	}
 	
 		.texte{
 			padding-top:10px;
@@ -444,6 +584,10 @@
 	font-size:18px;
 	color: #000000;
 	text-align: center;
+	}
+	
+	div:hover{
+	text-decoration: underline;
 	}
 	
 	.texte2-newarg{
@@ -756,7 +900,7 @@ label img {
 					margin-left:0px;
 
 					::-webkit-input-placeholder {
-					   font-family: "gotham";
+					   font-family: "gotham-Bold";
 						font-size: 19px;
 						letter-spacing: 0px;
 					}
@@ -947,18 +1091,33 @@ border-bottom: 1px Solid black;
 	
 	.suivant{
 	width: 149px;
-	height: 24px;
-	background-color: #808080;
-	margin-top: -25px;
+	height: 30px;
+	background-color: #839AB2;
+	margin-top: -28px;
 	margin-left: 415px;
 	font-family: "georgia";
-	font-size: 16px;
+	font-size: 18px;
 		
 		.text{
 		padding-left: 10px;
-		padding-top: 3px;
+		padding-top: 5px;
 		}
 		.flechehome{
+		margin-top: -38px;
+		margin-left:130px;
+		cursor: pointer;
+		}
+		.flechehome1{
+		margin-top: -38px;
+		margin-left:130px;
+		cursor: pointer;
+		}
+		.flechehome2{
+		margin-top: -38px;
+		margin-left:130px;
+		cursor: pointer;
+		}
+		.flechehome3{
 		margin-top: -38px;
 		margin-left:130px;
 		cursor: pointer;
@@ -1019,7 +1178,9 @@ border-image: url(border2.png) 13 fill repeat;
 	line-height: 23px;
 	 letter-spacing:-1px;
 	
-	
+		a:hover{
+		color:black;
+		}
 	}
 
 	#tags_list_doulin{
@@ -1089,6 +1250,7 @@ border-image: url(border2.png) 13 fill repeat;
 		font-family: "bebasneue-webfont";
 		font-size: 25px;
 		padding: 5px 9px 5px 9px;
+		border: 1px Solid white;
 		
 		.oui{
 		color: white;
