--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -1,4 +1,127 @@
-	 #group-badge1{
+#group-creation{
+	margin-left: 150px;
+	.logo2{
+	margin: 90px 0px 50px 325px;
+	
+	.titre{
+	margin-left: -75px;
+	margin-top:10px;
+	}
+		.title{
+		font-family: "gotham";
+		font-size: 48px;
+		line-spacing: -25px;
+		color: black;
+		}
+	}
+	
+	#sign_in1{
+		margin-top: 40px;
+		margin-left: 0px;
+		font-family: "georgia";
+		font-style: italic;
+		font-weight: bold;
+		font-size: 16px;
+		text-align: center;
+		margin-right: 150px;
+		
+		.error{
+		margin-top: 15px;
+		margin-left: 0px;
+		font-family: "georgia";
+		font-style: italic;
+		font-size: 13px;
+		text-align: center;
+		color: #FF6969;
+		}
+	}
+	
+	#sign_in2{
+	margin-top: 20px;
+	width: 530px;
+	background-color: #AAD0FF;
+	border-radius: 13px;
+	margin-left: 100px;
+	height: 320px;
+	
+		#sign_in3{
+		margin-top: 50px;
+		margin-left: 15px;
+		margin-right: 15px;
+		
+			#sign_in4{
+			margin-left: 0px;
+			margin-top: 15px;
+			text-align: center;
+
+					::-webkit-input-placeholder {
+					   font-family: "gotham";
+					   color: black;
+					}
+					
+					.texte1{
+					font-family: "gotham";
+					font-size: 25px;
+					
+					}
+					
+					.login-field{
+						width: 400px;
+						border-radius: 0px;
+						background-color: white;
+						font-family: "georgia";
+						font-size: 15px;
+						color: black;
+						height: 25px;
+						border: none;
+						}
+						
+						.login-field1{
+							margin-top: -21px;
+							margin-left: 0px;
+							width: 412px;
+							border-radius: 0px;
+							background-color: white;
+							font-family: "georgia";
+							font-size: 15px;
+							color: black;
+							border: none;
+							}
+		
+					.texte{
+					width: 184px;
+					padding-left: 5px;
+					font-family: "gotham-Bold";
+					font-size:13px;
+					margin-right: 40px;
+					}
+					.texte2{
+					float: left;
+					margin-left: 40px;
+					padding-left: 5px;
+					font-family: "gotham-Bold";
+					font-size:13px;
+					margin-right: 10px;
+					}
+					.submit-login{
+					float: right;
+					margin-right: 40px;
+					border-radius: 0px;
+					border: none;
+					background-color: black;
+					font-family: "gotham";
+					font-size: 12px;
+					color: white;
+					height: 24px;
+					}
+			}
+	
+	}
+}
+}
+
+
+#group-badge1{
 	.badge2{
 		height: 133px;
 		width: 427px;
@@ -393,7 +516,7 @@
 	#revenir-augroupe2{
 		margin-left: 204px;
 		margin-top: 30px;
-		width: 310px;
+		width: 280px;
 		height: 28px;
 		color: white;
 		margin-bottom: 20px;
