--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -28,10 +28,6 @@ header {
 		.titre:hover{
 		color: black;
 		}
-		
-		.rouge{
-		color: #FF7575;
-		}
 
 		
 	}
@@ -55,6 +51,11 @@ header {
 		text-align: center;
 		margin-bottom: 15px;
 		
+		a:hover{
+			text-decoration:underline;
+			color: #000;
+		}
+		
 	}
 	
 	.nom2{
@@ -62,7 +63,6 @@ header {
 		height: 22px;
 		padding-top: 5px;
 		background-color: #FF7575;
-		color: black;
 		font-family: "gotham-Bold";
 		font-size: 15px;
 		text-align: center;
@@ -227,7 +227,7 @@ header {
 	}
 	
 	#main-nav {
-    margin-left:20px;
+    margin-left:0px;
 	margin-top: 10px;
 	font-family: "gotham";
 	font-size:20px;
@@ -243,20 +243,26 @@ header {
 	.first{
 	}
 	
-    .black{
-		color: #000;
-	}	
+	.active{
+	background-color: #AAD0FF;
+	color: black;
+	padding:5px 15px;
+	}
+		
       li {
         display: inline-block;
 		padding-right:22px;
+		color: black;
+      }
+     a:hover {
+		text-decoration:underline;
+		color: #000;
       }
 	
 	.last{
 	padding-right:0px;
 	}
-      li.active, li:hover {
-		text-decoration:underline;
-      }
+
     }
 
 
