--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -64,7 +64,7 @@
 	
 	.action-notification3{
 	width: 22px;
-	background-color: #808080;
+	background-color: #AAD0FF;
 	font-family: "bebasneue-webfont";
 	text-align: center;
 	font-size:22px;
@@ -81,7 +81,7 @@
 	}
 	.action-notification4{
 	width: 27px;
-	background-color: #808080;
+	background-color: #AAD0FF;
 	font-family: "bebasneue-webfont";
 	text-align: center;
 	font-size:22px;
@@ -103,7 +103,7 @@
 			height:30px;
 			padding-left: 10px;
 			padding-top: 10px;
-			background-color: #FF7575;
+			background-color: #EEE;
 			font-style: italic;
 			font-size: 14px;
 			font-family: "georgia";
@@ -114,7 +114,7 @@
 			padding: 6px;
 			margin-left: 390px;
 			width: 22px;
-			background-color: #808080;
+			background-color: #AAD0FF;
 			font-family: "bebasneue-webfont";
 			text-align: center;
 			font-size:22px;
@@ -130,7 +130,7 @@
 			padding: 6px;
 			margin-left: 430px;
 			width: 25px;
-			background-color: #808080;
+			background-color: #AAD0FF;
 			font-family: "bebasneue-webfont";
 			text-align: center;
 			font-size:22px;
@@ -276,11 +276,10 @@
 			.field2{
 			font-style: italic;
 			font-family: "georgia";
-			padding: 7px;
-			width: 135px;
-			background-color: white;
+			width: 130px;
+			background-color: #AAD0FF;
 			border-radius: 0px;
-			border: none;
+			border: 1px solid white;
 			cursor: pointer;
 			}
 		}
@@ -354,15 +353,14 @@
 	margin-left: 160px;
 	width: 900px;
 	margin-top: -15px;
-
+	
 	.div{
 	diplay: inline-block;
 	}
 	
 	#container-activ3{
-	margin-top:0px;
+	background-color: red;
 	width: 650px;
-	margin-left: 20px;
 	}
 	
 	#container-activ2{
@@ -457,6 +455,7 @@
 	margin-left: 15px;
 	}
 	}
+	
 	#sign_in1{
 		margin-top: 40px;
 		margin-left: 0px;
