--- a/app/views/challenges/_american.html.erb
+++ b/app/views/challenges/_american.html.erb
@@ -1,6 +1,12 @@
 <section id="american">
 	<div class="container">
 		
+		<div id="share">
+			<span>Partagez le débat sur</br></span>
+				<div class="ok">
+				<%=image_tag('facebook-blanc.png', :alt => 'Moutoners', class: "image")%>
+				<div class="okk"><%= social_share_button_tag(@challenge.title) %></div></div>
+		</div>
 		<div class="row" id="american-title">
 			<div class="span2" id="american-gauche">
 				<div class="row" id="equipe">
@@ -271,11 +277,6 @@
 			</div>
 		</div>
 			
-		<div class="span1" id="share">
-				<div class="ok">
-				<%=image_tag('facebook_petit.png', :alt => 'Moutoners', class: "image")%>
-				<div class="okk"><%= social_share_button_tag(@challenge.title) %></div></div>
-		</div>
 
 		<div class="span1" id="follow">
 			<div class="follow">
@@ -310,11 +311,11 @@
 	   			<%= link_to image_tag("cat-societe.png", :alt => 'Moutoners'), list_path(:cat => 8)%>
 	   		<%end%>
 	   		</div>
-	   	</div>		
+	   	</div>
 		
 		
+		<% if !@challenge.context == nil%>
 		<div class="row">
-
 			<div class "row" id="to-be-closed">
 				<div id="effective-context"><div class="text"><%= h(@challenge.content).gsub(/\n/, '<br/>').html_safe%></div></div>
 			</div>
@@ -324,7 +325,7 @@
 				<div class="arrow-up-context"></div>
 			</div>
 		</div>
-		
+		<% end%>
 
 			<% if @challenge.state =="incomplete" && !@challenge.not_full?%>
 			<% if current_user && current_user == @challenge.prime_minister %>
@@ -339,10 +340,10 @@
 				<% if @challenge.state == "first" %>
 					<% if signed_in? && current_user == @challenge.prime_minister %>
 						<% if !@challenge.arguments.where(position: 1).any? %>
-							<div id="start">C'est ton tour !</div>
+							<div id="start3">C'est ton tour !</div>
 							<%= render "shared/argument_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 1 %>
 						<% else %>
-						<div id="start">	<%= link_to("VALIDE TON ARGUMENT".html_safe,
+						<div id="start2">	<%= link_to("Il faut valider l'argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 											<%= render "shared/argument_badge", argument: @challenge.first_argument %>
 						<% end %>
@@ -358,11 +359,11 @@
 				<% if @challenge.state == "second" %>
 					<% if signed_in? && current_user == @challenge.first_opponent %>
 						<% if !@challenge.arguments.where(position: 2).any? %>
-							<div id="start">C'est ton tour !</div>
+							<div id="start4">C'est ton tour !</div>
 							<%= render "shared/argument_contre_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 2 %>
 						<% else %>
 
-							<div id="start"><%= link_to("VALIDE TON ARGUMENT".html_safe,
+							<div id="start1">	<%= link_to("Il faut valider l'argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 								<%= render "shared/argument_contre_badge", argument: @challenge.second_argument %>
 						<% end %>
@@ -378,11 +379,11 @@
 				<% if @challenge.state == "third" %>
 					<% if signed_in? && current_user == @challenge.second_prop %>
 						<% if !@challenge.arguments.where(position: 3).any? %>
-							<div id="start">C'est ton tour !</div>
+							<div id="start3">C'est ton tour !</div>
 							<%= render "shared/argument_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 3 %>
 						<% else %>
 
-							<div id="start"><%= link_to("VALIDE TON ARGUMENT".html_safe,
+							<div id="start2">	<%= link_to("Il faut valider l'argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 							<%= render "shared/argument_badge", argument: @challenge.third_argument %>
 						<% end %>
@@ -397,11 +398,11 @@
 				<% if @challenge.state == "forth" %>
 					<% if signed_in? && current_user == @challenge.second_opp %>
 						<% if !@challenge.arguments.where(position: 4).any? %>
-							<div id="start">C'est ton tour !</div>
+							<div id="start4">C'est ton tour !</div>
 							<%= render "shared/argument_contre_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 4 %>
 						<% else %>
 
-							<div id="start"><%= link_to("VALIDE TON ARGUMENT".html_safe,
+							<div id="start1">	<%= link_to("Il faut valider l'argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 							<%= render "shared/argument_contre_badge", argument: @challenge.fourth_argument %>
 						<% end %>
@@ -416,11 +417,11 @@
 				<% if @challenge.state == "fifth" %>
 					<% if signed_in? && current_user == @challenge.first_opponent %>
 						<% if !@challenge.arguments.where(position: 5).any? %>
-							<div id="start">C'est ton tour !</div>
+							<div id="start4">C'est ton tour !</div>
 							<%= render "shared/argument_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 5 %>
 						<% else %>
 
-							<div id="start"><%= link_to("VALIDE TON ARGUMENT".html_safe,
+							<div id="start1"><%= link_to("Il faut valider l'argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 					<%= render "shared/argument_neutre_badge", argument: @challenge.fifth_argument %>
 						<% end %>
@@ -438,7 +439,7 @@
 							<div id="start">C'est ton tour !</div>
 							<%= render "shared/argument_contre_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 6 %>
 						<% else %>
-							<div id="start"><%= link_to("VALIDE TON ARGUMENT".html_safe,
+							<div id="start2">	<%= link_to("Il faut valider l'argument. Il sera ensuite non-modifiable.".html_safe,
 					              finish_challenge_path(@challenge) ,:method => :post) %></div>
 							<%= render "shared/argument_badge", argument: @challenge.sixth_argument %>
 						<% end %>
