--- a/app/views/challenges/_british.html.erb
+++ b/app/views/challenges/_british.html.erb
@@ -1,6 +1,11 @@
 <section id="british">
 	<div class="container">
-		
+		<div id="share">
+			<span>Partagez le débat sur</br></span>
+				<div class="ok">
+				<%=image_tag('facebook-blanc.png', :alt => 'Moutoners', class: "image")%>
+				<div class="okk"><%= social_share_button_tag(@challenge.title) %></div></div>
+		</div>
 		<div class="row" id="british-title">
 			<div class="span2" id="british-gauche">
 				<div class="row" id="equipe">
@@ -554,12 +559,6 @@
 		</div>
 			
 
-		<div class="span1" id="share">
-				<div class="ok">
-				<%=image_tag('facebook_petit.png', :alt => 'Moutoners', class: "image")%>
-				<div class="okk"><%= social_share_button_tag(@challenge.title) %></div></div>
-		</div>
-
 		<div class="span1" id="follow">
 			<div class="follow">
 	   		<% if current_user && current_user.following?(@challenge)%>
@@ -595,9 +594,8 @@
 	   		</div>
 	   	</div>		
 		
-		
+		<% if !@challenge.context == nil%>
 		<div class="row">
-
 			<div class "row" id="to-be-closed">
 				<div id="effective-context"><div class="text"><%= h(@challenge.content).gsub(/\n/, '<br/>').html_safe%></div></div>
 			</div>
@@ -607,6 +605,7 @@
 				<div class="arrow-up-context"></div>
 			</div>
 		</div>
+		<% end%>
 		
 
 			<% if @challenge.state =="incomplete" && !@challenge.not_full?%>
@@ -622,10 +621,10 @@
 				<% if @challenge.state == "first" %>
 					<% if signed_in? && current_user == @challenge.prime_minister %>
 						<% if !@challenge.arguments.where(position: 1).any? %>
-							<div id="start">C'est ton tour !</div>
+							<div id="start3">C'est ton tour !</div>
 							<%= render "shared/argument_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 1 %>
 						<% else %>
-						<div id="start">	<%= link_to("VALIDE TON ARGUMENT".html_safe,
+						<div id="start2">	<%= link_to("Il faut valider l'argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 											<%= render "shared/argument_badge", argument: @challenge.first_argument %>
 						<% end %>
@@ -641,11 +640,11 @@
 				<% if @challenge.state == "second" %>
 					<% if signed_in? && current_user == @challenge.first_opponent %>
 						<% if !@challenge.arguments.where(position: 2).any? %>
-							<div id="start">C'est ton tour !</div>
+							<div id="start4">C'est ton tour !</div>
 							<%= render "shared/argument_contre_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 2 %>
 						<% else %>
 
-							<div id="start"><%= link_to("VALIDE TON ARGUMENT".html_safe,
+							<div id="start1">	<%= link_to("Il faut valider l'argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 								<%= render "shared/argument_contre_badge", argument: @challenge.second_argument %>
 						<% end %>
@@ -661,11 +660,11 @@
 				<% if @challenge.state == "third" %>
 					<% if signed_in? && current_user == @challenge.second_prop %>
 						<% if !@challenge.arguments.where(position: 3).any? %>
-							<div id="start">C'est ton tour !</div>
+							<div id="start3">C'est ton tour !</div>
 							<%= render "shared/argument_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 3 %>
 						<% else %>
 
-							<div id="start"><%= link_to("VALIDE TON ARGUMENT".html_safe,
+							<div id="start2">	<%= link_to("Il faut valider l'argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 							<%= render "shared/argument_badge", argument: @challenge.third_argument %>
 						<% end %>
@@ -680,11 +679,11 @@
 				<% if @challenge.state == "forth" %>
 					<% if signed_in? && current_user == @challenge.second_opp %>
 						<% if !@challenge.arguments.where(position: 4).any? %>
-							<div id="start">C'est ton tour !</div>
+							<div id="start4">C'est ton tour !</div>
 							<%= render "shared/argument_contre_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 4 %>
 						<% else %>
 
-							<div id="start"><%= link_to("VALIDE TON ARGUMENT".html_safe,
+							<div id="start1">	<%= link_to("Il faut valider l'argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 							<%= render "shared/argument_contre_badge", argument: @challenge.fourth_argument %>
 						<% end %>
@@ -699,10 +698,10 @@
 				<% if @challenge.state == "fifth" %>
 					<% if signed_in? && current_user == @challenge.third_prop %>
 						<% if !@challenge.arguments.where(position: 5).any? %>
-							<div id="start">C'est ton tour !</div>
+							<div id="start3">C'est ton tour !</div>
 							<%= render "shared/argument_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 5 %>
 						<% else %>
-						<div id="start">	<%= link_to("VALIDE TON ARGUMENT".html_safe,
+						<div id="start2">	<%= link_to("Il faut valider l'argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 											<%= render "shared/argument_fc1_badge", argument: @challenge.fifth_argument %>
 						<% end %>
@@ -718,11 +717,11 @@
 				<% if @challenge.state == "sixth" %>
 					<% if signed_in? && current_user == @challenge.third_opp %>
 						<% if !@challenge.arguments.where(position: 6).any? %>
-							<div id="start">C'est ton tour !</div>
+							<div id="start4">C'est ton tour !</div>
 							<%= render "shared/argument_contre_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 6 %>
 						<% else %>
 
-							<div id="start"><%= link_to("VALIDE TON ARGUMENT".html_safe,
+							<div id="start1">	<%= link_to("Il faut valider l'argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 								<%= render "shared/argument_fc2_badge", argument: @challenge.sixth_argument %>
 						<% end %>
@@ -738,11 +737,11 @@
 				<% if @challenge.state == "seventh" %>
 					<% if signed_in? && current_user == @challenge.fourth_prop %>
 						<% if !@challenge.arguments.where(position: 7).any? %>
-							<div id="start">C'est ton tour !</div>
+							<div id="start3">C'est ton tour !</div>
 							<%= render "shared/argument_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 7 %>
 						<% else %>
 
-							<div id="start"><%= link_to("VALIDE TON ARGUMENT".html_safe,
+							<div id="start2">	<%= link_to("Il faut valider l'argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 							<%= render "shared/argument_fc1_badge", argument: @challenge.seventh_argument %>
 						<% end %>
@@ -757,11 +756,11 @@
 				<% if @challenge.state == "eighth" %>
 					<% if signed_in? && current_user == @challenge.fourth_opp %>
 						<% if !@challenge.arguments.where(position: 8).any? %>
-							<div id="start">C'est ton tour !</div>
+							<div id="start4">C'est ton tour !</div>
 							<%= render "shared/argument_contre_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 8 %>
 						<% else %>
 
-							<div id="start"><%= link_to("VALIDE TON ARGUMENT".html_safe,
+							<div id="start1">	<%= link_to("Il faut valider l'argument. Il sera ensuite non-modifiable.".html_safe,
 					              finish_challenge_path(@challenge) ,:method => :post) %></div>
 							<%= render "shared/argument_fc2_badge", argument: @challenge.eighth_argument %>
 						<% end %>
